# OpenglLearn

./: .gitignore  CMakeLists.txt  README.md  Shader.h  main.cpp  shader.fs
Shaders/: cube.fs  cube.vs  plane.fs  plane.vs  shader.vs  texture.fs  texture.vs
src/: Camera.h  Engine.cpp  Engine.h  GLHealder.h  GameModels.h  Shader.h  Vertex.h  glad.c  shader.vs
src/Init/: ContextInfo.h  FrameBufferInfo.h  IListener.h  InitGlad.h  InitGlfw.cpp  InitGlfw.h  WindowInfo.h
src/Managers/: GameModels.cpp  GameModels.h  ModelsManager.cpp  ModelsManager.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h
src/Rendering/: IGameObject.h  Label.cpp  Label.h  Mesh.cpp  Mesh.h  Vertex.h
src/Rendering/Models/: Cube.cpp  Cube.h  CubeIndexed.cpp  CubeIndexed.h  Model.cpp  Model.h  Plane.cpp  Plane.h  Quad.cpp  Quad.h  Triangle.cpp  Triangle.h
